Prevent horizontal overflow of chat posts

--- a/assets/stylesheets/babble.scss
+++ b/assets/stylesheets/babble.scss
@@ -69,7 +69,8 @@
 /* Post styles */
 .babble-posts {
   width: 100%;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   height: 500px;
 }
 
